k8s/command-builder-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-builder-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: command-builder-frontend
  template:
    metadata:
      labels:
        app: command-builder-frontend
    spec:
      containers:
        - name: command-builder-frontend
          image: ghcr.io/vivekweb2013/command-builder/command-builder-frontend:1.0.0-SNAPSHOT
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
