k8s/command-builder-backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: command-builder-backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: command-builder-backend
  ports:
    - port: 8080
      targetPort: 8080
