k8s/command-builder-frontend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: command-builder-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: command-builder-frontend
  ports:
    - port: 3000
      targetPort: 3000
