k8s/commandhunt-backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: commandhunt-backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: commandhunt-backend
  ports:
    - port: 8080
      targetPort: 8080
