k8s/commandhunt-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: commandhunt-frontend-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: commandhunt-backend-cluster-ip-service
                port:
                  number: 8080
